<resources>
    <string name="app_name">Alertify</string>
    <string name="title_inicio">Inicio</string>
    <string name="title_mapa">Mapa</string>
    <string name="title_reportes">Reportes</string>
    <string name="title_guia">Guia</string>
    <string name="title_settings">Ajustes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="Reportes">Reportes</string>
    <string name="str_titulo">Título</string>
    <string name="str_enviar">Enviar</string>
    <string name="Alertify">Alertify</string>
    <string name="Guía">Guía</string>
    <string name="Mapa">Mapa</string>
    <string name="Ajustes">Ajustes</string>
    <string name="title_activity_login">Iniciar Sesión</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="ajustes">Ajustes</string>
    <string name="title_activity_inicio_activ2">InicioActiv2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
