<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_inicio"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_inicio" />

    <item
        android:id="@+id/navigation_mapa"
        android:icon="@android:drawable/ic_dialog_map"
        android:title="@string/title_mapa" />

    <item
        android:id="@+id/navigation_reportes"
        android:icon="@android:drawable/ic_dialog_alert"
        android:title="@string/title_reportes" />
    <item
        android:id="@+id/navigation_guia"
        android:icon="@android:drawable/ic_dialog_info"
        android:title="@string/title_guia" />
    <item
        android:id="@+id/navigation_settings"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/title_settings" />

</menu>
